Closed Bug 1828882 Opened 1 years ago Closed 1 year ago

Early Hints: Preloaded channels do not show up in devtools

Categories

(Core :: Networking, defect, P2)

defect

Tracking

()

RESOLVED FIXED
116 Branch
Tracking Status
firefox116 --- fixed

People

(Reporter: manuel, Assigned: manuel)

References

(Blocks 1 open bug)

Details

(Whiteboard: [necko-triaged])

Attachments

(1 file)

No description provided.

We need to add a BrowsingContext to the Early Hints Channel: https://bugzilla.mozilla.org/show_bug.cgi?id=1761248#c10

Pushed by mbucher@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/c8df8c0bde60 Fix Early Hint preload channels not showing up in devtools r=necko-reviewers,kershaw
Status: NEW → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 116 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: