Bug 1828882 - Fix Early Hint preload channels not showing up in devtools r=necko-reviewers,kershaw

Differential Revision: https://phabricator.services.mozilla.com/D179551